--- a/src/app/detail/detail.tpl.html
+++ b/src/app/detail/detail.tpl.html
@@ -9,8 +9,8 @@
                 <a class="option pull-right" ng-click="back=true"><i class="icon-edit icon-large"></i></a>
             </div>
 
-            <div class="content mas">
-                <div class="clearfix">
+            <div class="content mhs">
+                <div class="mts clearfix">
                     <div class="pull-left prm">
                         <img ng-src="{{meta.imgbase}}{{e.image.thumbnail2}}"/>
                     </div>
@@ -32,65 +32,126 @@
                     <a class="btn btn-inverse" ng-click="onUpload()">上传照片</a>
                 </div>
 
-                <div class="mvl" ng-init="select=1">
-                    <div class="">
+                <div class="container" ifill-bottom=3 ihtabs="card" ng-init="select=0">
+                    <div ihtabs-padding=30 class="tabs-navs">
                         <span ng-click="select=0" ng-class="{active: select==0}">活动简介</span>
                         <span ng-click="select=1" ng-class="{active: select==1}">活动讨论</span>
                         <span ng-click="select=2"  ng-class="{active: select==2}">活动照片</span>
                     </div>
-                </div>
 
-                <div class="mtl">
-                    <div class="container" ifill-bottom imargin=4>
-                        <div ihshift isel="select" imargin=30>
-                            <div style="background: blanchedalmond" ivscroll ivreset="e">
-                                <p style="white-space:pre-wrap">{{e.description}}</p>
-                                <hr>
-                                <p>参与名单<span><small>({{e.attendees.length}}):</small></span></p>
-                                <a ng-repeat="u in e.attendees" class="app-user-list">
-                                    <img class="v-middle" ng-src={{u.profile_image_url}} />
-                                    <span>{{u.name}}</span>
-                                </a>
-                            </div>
-                            <div style="background: cadetblue" ng-controller='CommentCtrl' ivscroll ivreset="e">
-                                <div>
-                                    <input class="pull-left" ng-model="comment" type="text" ifill-left imargin=4>
-                                    <a class="btn btn-primary pull-right " ng-click="onComment()">发布</a>
-                                    <div style="clear: both">
-                                        <input type="checkbox" ng-model="wbChecked" style="width: auto">
-                                        <span>同时发布到新浪微博</span>
-                                    </div>
+                    <div ihtabs-bar class="tabs-bar mvs"></div>
+
+                    <div class="container">
+                    <div ihshift="select" ihshift-margin=40>
+                        <div style="background: blanchedalmond" ivscroll ivreset="e">
+                            <p style="white-space:pre-wrap">{{e.description}}</p>
+                            <hr>
+                            <p>参与名单<span><small>({{e.attendees.length}}):</small></span></p>
+                            <a ng-repeat="u in e.attendees">
+                                <img style="vertical-align: middle" ng-src={{u.profile_image_url}} />
+                                <span>{{u.name}}</span>
+                            </a>
+                        </div>
+                        <div style="background: cadetblue" ng-controller='CommentCtrl' ivscroll ivreset="e">
+                            <div>
+                                <input class="pull-left" ng-model="comment" type="text" ifill-left=4>
+                                <a class="btn btn-primary pull-right " ng-click="onComment()">发布</a>
+                                <div style="clear: both">
+                                    <input type="checkbox" ng-model="wbChecked" style="width: auto">
+                                    <span>同时发布到新浪微博</span>
                                 </div>
+                            </div>
 
-                                <div ng-repeat="c in e.comment_set">
-                                    <div class="pvm clearfix">
-                                        <div class="pull-left prm">
-                                            <img  ng-src={{c.author.profile_image_url}} />
-                                        </div>
-                                        <div >
-                                            <p class="pbm">
-                                                <span>{{c.author.name}} : </span>
-                                                <span>{{c.body}}</span>
-                                            </p>
-                                            <p class="mrl prl">
-                                                <span><small>{{c.created | date:'MM月dd日 HH:mm'}}</small></span>
+                            <div ng-repeat="c in e.comment_set">
+                                <div class="pvm clearfix">
+                                    <div class="pull-left prm">
+                                        <img  ng-src={{c.author.profile_image_url}} />
+                                    </div>
+                                    <div >
+                                        <p class="pbm">
+                                            <span>{{c.author.name}} : </span>
+                                            <span>{{c.body}}</span>
+                                        </p>
+                                        <p class="mrl prl">
+                                            <span><small>{{c.created | date:'MM月dd日 HH:mm'}}</small></span>
                                                 <span class="pull-right" ng-show="meta.user.id===c.author.id">
                                                     <a ng-click="onCommentDel(c.id)"><i class="icon-trash"></i></a>
                                                  </span>
-                                            </p>
-                                        </div>
+                                        </p>
                                     </div>
-                                    <hr>
                                 </div>
-                            </div>
-                            <div style="background: darkgray" ivscroll ivreset="e">
-                                <a ng-repeat="img in e.album">
-                                    <img ng-src="{{meta.imgbase}}{{img.thumbnail2}}">
-                                </a>
+                                <hr>
                             </div>
                         </div>
+                        <div style="background: darkgray" ivscroll ivreset="e">
+                            <a ng-repeat="img in e.album">
+                                <img ng-src="{{meta.imgbase}}{{img.thumbnail2}}">
+                            </a>
+                        </div>
+
+                    </div>
                     </div>
                 </div>
+
+                <!--<div class="mvl" ng-init="select=1">-->
+                    <!--<div class="clearfix" ihtabs isel="select" ipos="offset">-->
+                        <!--<span ng-click="select=0" ng-class="{active: select==0}" CLASS="pull-left">活动简介</span>-->
+                        <!--<span ng-click="select=1" ng-class="{active: select==1}" CLASS="pull-left">活动讨论</span>-->
+                        <!--<span ng-click="select=2"  ng-class="{active: select==2}" CLASS="pull-left">活动照片</span>-->
+                    <!--</div>-->
+                <!--</div>-->
+
+                <!--<div class="mtl">-->
+                    <!--<div class="container" ifill-bottom imargin=4>-->
+                        <!--<div ihshift isel="select" imargin=30>-->
+                            <!--<div style="background: blanchedalmond" ivscroll ivreset="e">-->
+                                <!--<p style="white-space:pre-wrap">{{e.description}}</p>-->
+                                <!--<hr>-->
+                                <!--<p>参与名单<span><small>({{e.attendees.length}}):</small></span></p>-->
+                                <!--<a ng-repeat="u in e.attendees">-->
+                                    <!--<img style="vertical-align: middle" ng-src={{u.profile_image_url}} />-->
+                                    <!--<span>{{u.name}}</span>-->
+                                <!--</a>-->
+                            <!--</div>-->
+                            <!--<div style="background: cadetblue" ng-controller='CommentCtrl' ivscroll ivreset="e">-->
+                                <!--<div>-->
+                                    <!--<input class="pull-left" ng-model="comment" type="text" ifill-left imargin=4>-->
+                                    <!--<a class="btn btn-primary pull-right " ng-click="onComment()">发布</a>-->
+                                    <!--<div style="clear: both">-->
+                                        <!--<input type="checkbox" ng-model="wbChecked" style="width: auto">-->
+                                        <!--<span>同时发布到新浪微博</span>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+
+                                <!--<div ng-repeat="c in e.comment_set">-->
+                                    <!--<div class="pvm clearfix">-->
+                                        <!--<div class="pull-left prm">-->
+                                            <!--<img  ng-src={{c.author.profile_image_url}} />-->
+                                        <!--</div>-->
+                                        <!--<div >-->
+                                            <!--<p class="pbm">-->
+                                                <!--<span>{{c.author.name}} : </span>-->
+                                                <!--<span>{{c.body}}</span>-->
+                                            <!--</p>-->
+                                            <!--<p class="mrl prl">-->
+                                                <!--<span><small>{{c.created | date:'MM月dd日 HH:mm'}}</small></span>-->
+                                                <!--<span class="pull-right" ng-show="meta.user.id===c.author.id">-->
+                                                    <!--<a ng-click="onCommentDel(c.id)"><i class="icon-trash"></i></a>-->
+                                                 <!--</span>-->
+                                            <!--</p>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<hr>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                            <!--<div style="background: darkgray" ivscroll ivreset="e">-->
+                                <!--<a ng-repeat="img in e.album">-->
+                                    <!--<img ng-src="{{meta.imgbase}}{{img.thumbnail2}}">-->
+                                <!--</a>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
 
             </div>
     </div>
